--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "request": "^2.74.0",
     "request-promise": "^4.1.1"
   }
 }
