--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "claudia test-lambda --event .\\test\\event.json --profile saml",
+    "create": "claudia create --region us-east-1 --name introspection-authorizer --description 'AWS API GATEWAY Autorizer.  OWNER- Cris Barbero' --handler index.handler --profile saml",
+    "deploy": "claudia update --profile saml"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +14,9 @@
     "bluebird": "^3.4.6",
     "request": "^2.74.0",
     "request-promise": "^4.1.1"
+  },
+  "devDependencies": {
+    "claudia": "^1.8.0"
   }
+
 }
